--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,6 +63,16 @@ flutter {
     source '../..'
 }
 
+configurations {
+    debugImplementation {
+        exclude group: 'io.objectbox', module: 'objectbox-android'
+    }
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // Add objectbox-android-objectbrowser only for debug builds.
+    // Warning: when objectbox_flutter_libs updates check if version
+    // needs update, e.g. check https://github.com/objectbox/objectbox-dart/releases.
+    debugImplementation("io.objectbox:objectbox-android-objectbrowser:3.2.1") // or v1.6.0
 }
