--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   objectbox: ^1.6.0
   objectbox_flutter_libs: any
+  encrypt: ^5.0.1
 
   build_runner: ^2.2.0
 
